--- a/css/main.css
+++ b/css/main.css
@@ -2333,6 +2333,12 @@ address {
     position: relative;
     background: url(../images/bg-pattran.png);
 }
+.tg-bgpattrant-2 {
+    width: 100%;
+    float: left;
+    z-index: 2;
+    background: url(../images/bg/banner1.jpg);
+}
 
 .tg-upcomingmatch-counter {
     width: 100%;
@@ -6993,4 +6999,22 @@ ol, ul {
     position: absolute;
     right: 16px;
     bottom: 16px;
+}
+
+.dark-layer {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.z-index-1 {
+    z-index:1;
+}
+.z-index-2 {
+    z-index: 100;
 }
