--- a/css/main.css
+++ b/css/main.css
@@ -544,7 +544,7 @@ address {
 }
 
 .tg-main-section {
-    padding: 80px 0;
+    padding: 40px 0;
     overflow: hidden;
 }
 
@@ -3149,8 +3149,8 @@ address {
 .tg-posttitle {
     width: 100%;
     float: left;
-    margin: 0 0 20px;
-    padding: 0 0 20px;
+    margin: 0 0 10px;
+    padding: 0 0 10px;
     border-bottom: 1px solid #aeaeae;
 }
 
@@ -7012,9 +7012,101 @@ ol, ul {
     right: 0;
     background-color: rgba(0, 0, 0, 0.5);
 }
+.z-index-0 {
+    z-index: 0 !important;
+}
 .z-index-1 {
     z-index:1;
 }
 .z-index-2 {
     z-index: 100;
+}
+.fx-bg-groundBook {
+    background: #8ca800 url(../images/bg/turfG.jpg);
+    height: 100%;
+    background-size: cover;
+    width: 100%;
+    position: relative;
+    background-position: center;
+}
+.tg-main-section-100 {
+    padding: 100px 0;
+    /*overflow: hidden;*/
+    position:relative;
+}
+.bootstrap-select .bs-ok-default::after {
+    width: 0.3em;
+    height: 0.6em;
+    border-width: 0 0.1em 0.1em 0;
+    transform: rotate(45deg) translateY(0.5rem);
+}
+
+.btn.dropdown-toggle:focus {
+    outline: none !important;
+}
+
+.bootstrap-select .dropdown-menu li a, .bootstrap-select .dropdown-toggle .filter-option, .dropdown-toggle::after {
+    font-size: 14px;
+}
+.bootstrap-select .dropdown-menu li {
+    list-style:none;
+}
+
+.bootstrap-select .bs-ok-default::after {
+    font-size: 18px;
+}
+
+.bootstrap-select  .dropdown-menu > li > a {
+    padding: 6px 20px;
+}
+.datepicker td, .datepicker th {
+    width: 2.5rem;
+    height: 2.5rem;
+    font-size: 0.85rem;
+}
+
+
+    .datepicker .input-group {
+        border-radius: 30rem;
+    }
+
+.datepicker input.form-control {
+    border-radius: 30rem 0 0 30rem;
+    border: none;
+    height:40px;
+}
+
+.datepicker input.form-control:focus {
+    box-shadow: none;
+}
+
+    .datepicker input.form-control::placeholder, .bootstrap-select .dropdown-toggle .filter-option-inner-inner {
+        font-style: italic;
+    }
+
+.datepicker .input-group-text {
+    border-radius: 0 30rem 30rem 0;
+    border: none;
+}
+
+.datepicker .datepicker-dropdown {
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+.bfh-timepicker .input-group > .custom-select:not(:last-child), .bfh-timepicker .input-group > .form-control:not(:last-child) {
+    padding: 0;
+}
+.bfh-timepicker-popover > table {
+    width: 100%;
+}
+    .bfh-timepicker-popover > table > tbody > tr > td {
+        padding: 3px;
+    }
+.bfh-number-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
+}
+.bfh-timepicker-popover > table > tbody > tr > td.separator {
+    vertical-align: middle;
 }
